[package]
name = "ark-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ark-ff ={ version = "0.3.0"}
ark-ec = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = true, features = ["std"] }
ark-bls12-381 = { version = "0.3.0", features = ["curve"] }
ark-bls12-377 = { version = "0.3.0", features = ["curve"] }
ark-r1cs-std = { version = "0.3.0", default-features = true, features = ["std"] }
ark-relations = { version = "0.3.0", default-features = false  }
ark-crypto-primitives = { version = "0.3.0",features=["r1cs"] }
chrono = "0.3"
ark-groth16 = { version = "0.3.0"}
ark-snark = { version = "0.3.0"}
blake2 = "0.9.1"
[features]
parallel = []
print-trace = []
r1cs = []
commitment =[]
crh = []
merkle_tree= []
prf= []
sponge= []


